# ra1-ipc-sistema-computacao

./: .gitignore  README.md  test_completo.py
backend-cpp/: CMakeLists.txt
backend-cpp/include/: ipc_common.hpp  ipc_manager.hpp  pipe_module.hpp  shared_memory_module.hpp  socket_module.hpp  socket_utils.hpp
backend-cpp/src/: ipc_manager.cpp  json_codec.cpp  main.cpp  pipe_module.cpp  shared_memory_module.cpp  socket_module.cpp
frontend-python/: app.py  ipc_client.py  main.py  requirements.txt
tests/: bench.py  plot.py  run_smoke.py
tests/results/: results.csv
